--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,15 @@
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 26 mai 2020, 16:51:33
+    Author     : Crist
+*/
+
+
+
 .error {
   color: red;
 }
@@ -62,13 +74,4 @@ text-align: left;
     width: 200px;
     height: 50px;
     background-color: #33DCFF;
-}
-
-td, th, tr {
-border: 1px solid black;
-width: 50%;
-}
-
-#gauche{
-    align:left;
 }
