nom du createur du canal à coté du nom du canal

--- a/web/css/agriotes.css
+++ b/web/css/agriotes.css
@@ -82,6 +82,13 @@ width: 50%;
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-canal{
-    padding-left: 100px;
+
+.column{
+    padding-right: 410px;
 }
+
+    
+
+
+
+    
